hphp/hack/test/typecheck/await_as_an_expression/error/await_as_an_expression_unsafe_expr.php
<?hh // strict

async function bar(): Awaitable<void> {}

async function foo(): Awaitable<void> {
  /* UNSAFE_EXPR */ await bar(42);
}
