hphp/hack/test/typecheck/await_as_an_expression/error/await_as_an_expression_unsafe_expr.php.exp
File "await_as_an_expression_unsafe_expr.php", line 6, characters 27-33:
Too many arguments (Typing[4105])
File "await_as_an_expression_unsafe_expr.php", line 3, characters 16-18:
Definition is here
